Improve logging and remove collectors call